--- a/_posts/2019-07-05-the-us-narrative-today.html
+++ b/_posts/2019-07-05-the-us-narrative-today.html
@@ -2636,107 +2636,107 @@ stories:
   domain: http://www.sweetwaterreporter.net/
   link: https://www.sweetwaterreporter.net/football-t-shirts-wear-your-passion-with-pride/
 images:
-- name: liberty-back-statue-liberty-back-internet-numbers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-internet-numbers.jpg
-- name: liberty-back-statue-liberty-back-diego-rivera1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-diego-rivera1.jpg
-- name: supreme-court-supremecourt-marcel-duchamp.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-marcel-duchamp.jpg
-- name: old-door-lock-old-door-lock-plentiful.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-plentiful.jpg
-- name: legal-statue-legalstatue-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-clean-view.jpg
-- name: mediterranean-mediterranean-monet-one.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-monet-one.jpg
-- name: aws-s3-stories-server-cloud1-feed-people.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-server-cloud1-feed-people.jpg
-- name: crow-crow-gan-vogh.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-gan-vogh.jpg
-- name: oldsmallboat-oldsmallboat-blue-electricity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-blue-electricity.jpg
-- name: white-house-lawn-white-house-window-colored-circuits.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-colored-circuits.jpg
-- name: nyc-flag-nycflag-purple-storm.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-purple-storm.jpg
-- name: oldhousecars-house-old-cars-sunday.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-sunday.jpg
-- name: old-church-oldchurch-smoking-cigarette.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-smoking-cigarette.jpg
-- name: flower-barbed-wire-flower-barbed-wire-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-clean-view.jpg
-- name: hollywood-building-hollywood-building-propaganda-leaflets.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-propaganda-leaflets.jpg
-- name: amusement-park-amusement-park-2-colorful-dream.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-colorful-dream.jpg
-- name: trucksilo-trucksilo-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-dark-dali.jpg
-- name: stories-new-68-174-800-500-0-max-0--5--1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-68-174-800-500-0-max-0--5--1.jpg
-- name: old-door-lock-old-door-lock-2-colorful-dream.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-colorful-dream.jpg
-- name: mosaic-face-mosaic-face-sunday.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-sunday.jpg
-- name: trucksilo-trucksilo-marcel-duchamp.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-marcel-duchamp.jpg
-- name: old-door-lock-old-door-lock-oily-mcoilface.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-oily-mcoilface.jpg
-- name: gypsy-wagon-gypsywagon-crabapple.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-crabapple.jpg
-- name: oldhouse-granaryfield-colorful-dream.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-colorful-dream.jpg
-- name: aws-s3-diamondcreek-diamondcreek-still-1200.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-diamondcreek-diamondcreek-still-1200.jpg
-- name: fence-fence-spagetti-accident.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-spagetti-accident.jpg
-- name: oldcabin-oldcabin-ww2-color.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-ww2-color.jpg
-- name: old-gas-pumps-oldgaspumps-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-dark-dali.jpg
-- name: dragon-desert-desert-dragon-matrix.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-matrix.jpg
-- name: server-cloud-server-racks-door-colorful-blocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-colorful-blocks.jpg
-- name: oldsmallboat-oldsmallboat-colorful-dream.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-colorful-dream.jpg
-- name: capital-battle-capitolbattle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle.jpg
-- name: nazi-invasion-IMG_7875.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-IMG_7875.jpg
-- name: old-granary-field-oldhouse-blue-granite.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-blue-granite.jpg
-- name: soldier-kneeling-26304845730-d4e495e25f-o-spagetti-accident.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-spagetti-accident.jpg
-- name: oldcabin-oldcabin-internet-numbers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-internet-numbers.jpg
-- name: miamibeach-miamibeach-umberto-bocc.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-umberto-bocc.jpg
-- name: server-cloud1-free-woman.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud1-free-woman.jpg
-- name: aws-s3-deserthills-deserthills-still.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-deserthills-deserthills-still.jpg
-- name: beach-rocks-beach-rocks-currents-feed-people.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-feed-people.jpg
-- name: oldhouse-oldhouse-yellow-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-yellow-paper.jpg
-- name: containership-containership-pablo-blue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-pablo-blue.jpg
-- name: old-barn-old-barn-1500-crafty-painting.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-crafty-painting.jpg
-- name: oldhotel-oldhotel-dark-soul.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-dark-soul.jpg
-- name: beach-clouds-lifeguard-beachclouds-crunch-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-crunch-paper.jpg
-- name: border-fence-border-fence-on-hill-kandinsky-bv.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-kandinsky-bv.jpg
-- name: old-door-lock-old-door-lock-free-woman.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-free-woman.jpg
-- name: oldhousecars-house-old-cars-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-blue-circuit.jpg
-- name: white-house-whitehouse-dark-rain.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-dark-rain.jpg
-- name: cargo-ship-cargo-ship-on-sea-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-kand-two.jpg
-- name: downtown-trucksilo-smooth-ride.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-smooth-ride.jpg
+- name: old-granary-field-granaryfield-satan-red.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-satan-red.jpg
+- name: oldcabin-store-mucha-mult.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-mucha-mult.jpg
+- name: dragon-desert-desert-dragon-nazi-poster.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-nazi-poster.jpg
+- name: downtown-los-angeles-downtown-la-marcel-duchamp.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-marcel-duchamp.JPG
+- name: stories-new-49-127-800-500-0-max-0-1--1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-49-127-800-500-0-max-0-1--1.jpg
+- name: lincoln-memorial-lincolnmemorial-sunday.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-sunday.jpg
+- name: capital-battle-capitolbattle-really-hot.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-really-hot.jpg
+- name: store-on-corner-oldcabin-purple-pond.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-purple-pond.jpg
+- name: death-valley-death-valley-national-park-cinnamon-rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-cinnamon-rolls.jpg
+- name: white-house-lawn-white-house-lawn-sunday.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-sunday.jpg
+- name: beach-rocks-beach-rocks-currents-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-blue-brush.jpg
+- name: blossombar-space-pizza-file-00-00-24-99.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-space-pizza-file-00-00-24-99.jpg
+- name: fence-mexico-kand-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-kand-two.jpg
+- name: power-lines-power-lines-empty-space-hot-spicy.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-hot-spicy.jpg
+- name: beach-clouds-lifeguard-beachclouds-purple-storm.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-purple-storm.jpg
+- name: berlinwall2-berlinwall-green-zuma.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-green-zuma.jpg
+- name: gears-4882162452-fa3126b38d-b-smooth-ride.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-smooth-ride.jpg
+- name: store-on-corner-oldcabin-pablo-blue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-pablo-blue.jpg
+- name: oldbarn-oldbarn-purp-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-purp-paper.jpg
+- name: adam-smith-adam-smith-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-gan-vogh.jpg
+- name: birdhouse-birdhouse-atari-asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-atari-asteroids.jpg
+- name: server-cloud-server-racks-clouds-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-blue-circuit.jpg
+- name: carry-load-carryload-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-dark-dali.jpg
+- name: bluelake-post-modern-file-00-00-38-67.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-post-modern-file-00-00-38-67.jpg
+- name: pigeons-on-the-ledge-pigeons-on-ledge-ww2-color.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-ww2-color.jpg
+- name: blossombar-bright-sand-file-00-00-00-00.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-bright-sand-file-00-00-00-00.jpg
+- name: machine-road-machine-road-blue-electricity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-blue-electricity.jpg
+- name: legal-statue-legalstatue-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-dry-skin.jpg
+- name: paris-paris-oily-mcoilface.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-oily-mcoilface.jpg
+- name: mistywoods-babyfoot-kand-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-kand-two.jpg
+- name: oldsmallboat-oldsmallboat-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-aqua.jpg
+- name: liberty-back-statue-liberty-back-dark-rain.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-dark-rain.jpg
+- name: blossombar-dark-soul-file-00-00-50-62.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-dark-soul-file-00-00-50-62.jpg
+- name: pigeons-on-the-ledge-pigeons-on-ledge-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-dali-two.jpg
+- name: amusement-park-amusement-park-2-dark-soul.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-dark-soul.jpg
+- name: aws-s3-mountainlake-mountainlake-still.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-mountainlake-mountainlake-still.jpg
+- name: old-granary-field-granaryfield-pablo-blue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-pablo-blue.jpg
+- name: docks-docks-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-gan-vogh.jpg
+- name: cargo-ship-cargo-ship-on-sea-dark-rain.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-dark-rain.jpg
+- name: stories-4882162452-fa3126b38d-b-spagetti-accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-4882162452-fa3126b38d-b-spagetti-accident.jpg
+- name: razorcliff-razorcliff-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-diego-rivera1.jpg
+- name: pigeons-on-the-ledge-pigeons-on-ledge-colorful-dream.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-colorful-dream.jpg
+- name: supreme-court-supremecourt-propaganda-leaflets.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-propaganda-leaflets.jpg
+- name: stories-internet-gauages-3.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-internet-gauages-3.jpg
+- name: carry-load-carryload-graham-sutherland.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-graham-sutherland.jpg
+- name: mistywoods-babyfoot-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-clean-view.jpg
+- name: gears-4882162452-fa3126b38d-b-satan-red.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-satan-red.jpg
+- name: san-francisco-city-bridge-sf-city-bridge-ww2-dresden.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-ww2-dresden.jpg
+- name: meadowbutterfly-meadow-butterfly-plentiful.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-plentiful.jpg
+- name: server-cloud-server-racks-door-blue-circuit-5.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-blue-circuit-5.jpg
+- name: gears-4882162452-fa3126b38d-b-internet-numbers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-internet-numbers.jpg
 ---
 Louisville Basketball Holds Breath Amidst Possible Allegations.&nbsp;Star Singer Detained And Deported From Iran.&nbsp;Yes, Trump Makes Nice With Dictators, But His Tough Actions Count More.&nbsp;Immigrants Fired From Trump Clubs Seek White House Meeting.&nbsp;Tradition A Driving Force Behind Fairview Festivities.&nbsp;Feds Cite Seattle Childrens Hospital For Deadly Mold Problem.&nbsp;Town Prepares For 49th Annual July 4th Festival.&nbsp;Trump Considering Executive Order For Census Question.&nbsp;
